--- a/src/index.scss
+++ b/src/index.scss
@@ -78,3 +78,7 @@ textarea,
 [tabindex] {
     touch-action: manipulation;
 }
+
+.MuiTypography-root {
+    font-family: 'Resist_Sans_Display_Medium', sans-serif !important;
+}
